--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header h1 {
     font-size: 2.5rem;
     margin-bottom: 0.2em;
     letter-spacing: 1px;
+    color: var(--primary-blue-text-light);
 }
 
 header h2 {
